Revert "Fix horizontal scroll issue on mobile home page"
This reverts commit a1a65e65b9fbdb10c7dec1eb40a054dae5ffaca9.

--- a/src/index.css
+++ b/src/index.css
@@ -7,18 +7,12 @@
 }
 
 html,
-body,
-#root {
-    overflow-x: hidden !important;
+body {
+    overflow-x: hidden;
     width: 100%;
     max-width: 100vw;
 }
 
 body {
     position: relative;
-}
-
-#root>* {
-    max-width: 100vw;
-    overflow-x: hidden;
 }
